--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
            <button>5</button>
        </div>
 
-       <a href="">Enviar</a>
-    </div>
+       <a href="./pages/agradecimento.html">Enviar</a>
+
+
 </body>
 </html>
