Terceiro commit do agradecimento.html e Quarto commit do agradecimento.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            <button>5</button>
        </div>
 
-       <a href="./pages/agradecimento.html">Enviar</a>
+       <a href="./pages/Agradecimento.html">Enviar</a>
 
 
 </body>
