--- a/pages/Agradecimento.html
+++ b/pages/Agradecimento.html
@@ -1,8 +1,8 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="agradecimento.css">
+    <link rel="stylesheet" href="Agradecimento.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -10,16 +10,16 @@
     <title>Feedback - Agradecimento</title>
 </head>
 <body>
-    <div>
-        <img src="../images/illustration-thank-you.svg" alt="Ilustração de agradecimento">
+    <div class="card">
 
-        <p>Você selecionou 4 de 5</p>
+    <img src="../images/illustration-thank-you.svg" alt="Ilustração">
+    
+    <p class="paragrafo_nota">Você selecionou 4 de 5</p>
 
-       <h1>Obrigado!</h1>
+    <h1>Obrigado!</h1>
 
-       <p>Agradecemos por dedicar um momento para nós avaliar. Se precisar de mais suporte, não hesite em entrar em contato!</p>
-       
-    </div>
-    </div> 
+    <p>Agradecemos por dedicar um momento para nos avaliar. Se precisar de mais suporte, não hesite em entrar em contato!</p>
+
+   </div>
 </body>
 </html>
